# beebop

./: .gitignore  AUTHORS  HACKING  INSTALL  Makefile.am  NEWS  README  README.markdown  configure.ac  cross-configure  varddt.py
data/: Makefile.am  beebop.desktop  beebop.desktop.in  beebop.ui  beebop.xml  ddtbuilder.ui
patches/: Makefile.am  README  cairo.vapi.diff  gtk+-2.0.vapi.diff  gtk+-3.0.vapi.diff
po/: .gitignore  POTFILES.in  POTFILES.skip  it.po
src/: .gitignore  Makefile.am  application.vala  cell.vala  companyinfo.vala  compat.c  connector.vala  const.vala  ddtbuilder.c  document.vala  documentpainter.vala  goodsinfo.vala  painter.vala  preferences.vala  preferencesconnector.vala  preferencesview.vala  row.vala  shipmentinfo.vala  table.vala  ui.vala  util.vala  view.vala  widgetrow.vala
vapi/: Makefile.am  config.vapi
win32/: Makefile.am  README  README.markdown  beebop.nsi.in  cross-configure
