AC_INIT([DDT Builder], [0.0.1], [eof@kiyuko.org], [ddtbuilder])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

VALA_REQUIRED=0.7.0
GLIB_REQUIRED=2.12.0
GTK_REQUIRED=2.14.0
CAIRO_REQUIRED=1.8.0
PANGO_REQUIRED=1.20.0
LIBRSVG_REQUIRED=2.14.0

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_LIBTOOL
AM_PROG_VALAC($VALA_REQUIRED)
AC_SUBST(VALAC)

PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_REQUIRED
                        gobject-2.0 >= $GLIB_REQUIRED)
PKG_CHECK_MODULES(GTK, gdk-2.0 >= $GTK_REQUIRED
                       gtk+-2.0 >= $GTK_REQUIRED)
PKG_CHECK_MODULES(CAIRO, cairo >= $CAIRO_REQUIRED
                         cairo-pdf >= $CAIRO_REQUIRED)
PKG_CHECK_MODULES(PANGO, pango >= $PANGO_REQUIRED
                         pangocairo >= $PANGO_REQUIRED)
PKG_CHECK_MODULES(LIBRSVG, librsvg-2.0 >= $LIBRSVG_REQUIRED)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)
AC_SUBST(CAIRO_CFLAGS)
AC_SUBST(CAIRO_LIBS)
AC_SUBST(PANGO_CFLAGS)
AC_SUBST(PANGO_LIBS)
AC_SUBST(LIBRSVG_CFLAGS)
AC_SUBST(LIBRSVG_LIBS)

AC_CONFIG_FILES([
	Makefile
	data/Makefile
	vapi/Makefile
	src/Makefile])

AC_OUTPUT
